package EMS;

enum Employement {
    fullTime, partTime
}
