package EMS;

enum Gender {
    male, female, other
}
