package EMS;

//const raiseRequest = new mongoose.Schema({
//        employee: {type: employeeSchema},
//        status: {type: String}
//        });
enum Status {
    pending, accepted, denied
}

